// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardFooter component test should render without crash with props 1`] = `
<header
  className="card-footer cardFooter CLass"
/>
`;

exports[`CardFooter component test should render without crash without props 1`] = `
<header
  className="card-footer "
/>
`;
